# bet-recorder

./: .gitignore  README.md  pyproject.toml
src/bet_recorder/: __init__.py  __main__.py  blackjack_assistant.py  bookmaker_history_runtime.py  cli.py  exchange_worker.py  exchange_worker_evidence.py  exchange_worker_live.py  exchange_worker_runtime.py  owls_insight.py  paths.py  tracked_bets_runtime.py  watcher.py  watcher_browser.py  watcher_state.py  watcher_storage.py  worker_protocol.py
tests/: test_action_snapshot.py  test_agent_browser_capture.py  test_agent_browser_client.py  test_bet365_analysis.py  test_bets_observations.py  test_betuk_analysis.py  test_betway_analysis.py  test_betway_collectors.py  test_blackjack_assistant.py  test_bookmaker_history_runtime.py  test_browser_adapter.py  test_browser_models.py  test_cdp_client.py  test_cdp_transport_capture.py  test_cli_capture.py  test_exchange_worker_live.py  test_exchange_worker_session.py  test_exchange_worker_stdio.py  test_exit_policy.py  test_expected_value.py  test_fairodds_collectors.py  test_generic_sportsbook_analysis.py  test_ledger_history_import.py  test_ledger_loader.py  test_live_runner.py  test_owls_insight.py  test_page_snapshot.py  test_position_watch.py  test_profitmaximiser_collectors.py  test_racing_markets.py  test_rebelbetting_rb_collectors.py  test_rebelbetting_vb_collectors.py  test_run_bundle.py  test_screenshots.py  test_smarkets_analysis.py  test_smarkets_cashout.py  test_smarkets_collectors.py  test_smarkets_profile_capture.py  test_smarkets_watcher.py  test_source_profiles.py  (+7 more)
(+75 files in other folders)
